force-app/main/default/objects/AWS_Config__c/fields/AWS_Access_Key__c.field-meta.xml
<CustomField>
    <fullName>AWS_Access_Key__c</fullName>
    <label>AWS Access Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>