force-app/main/default/objects/AWS_Config__c/fields/AWS_Secret_Access_Key__c.field-meta.xml
<CustomField>
    <fullName>AWS_Secret_Access_Key__c</fullName>
    <label>AWS AWS Secret Access Key Access Key</label>
    <length>70</length>
    <type>Text</type>
</CustomField>